# ciccio

./: .gitignore  README.md  index.html  justfile  main.py  podcast.py  pyproject.toml  requirements.txt
pyAudioAnalysis/: MidTermFeatures.py  ShortTermFeatures.py  audioBasicIO.py  audioTrainTest.py  utilities.py
